--- a/guides/middleware.html
+++ b/guides/middleware.html
@@ -25,7 +25,40 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>app/middleware/</code> directory contains helpers that wrap the router. Logging, session authentication and CSRF verification are implemented as middleware. Compose them to build the request chain.</p>
+        <p>Middleware in Monolith is implemented using Go's <code>http.Handler</code> interface. Each piece of middleware receives a handler and returns a new handler that wraps it, performing work before or after calling the next handler in the chain.</p>
+        <h2 id="existing-middleware">Existing Middleware</h2>
+        <p>The default project includes two middlewares located in <code>app/middleware/</code>:</p>
+        <ul>
+          <li><strong>LoggingMiddleware</strong> – records each request's method, path and response status via the structured logger.</li>
+          <li><strong>CSRFMiddleware</strong> – protects against cross-site request forgery by verifying tokens on mutating requests and responding with <code>403 Forbidden</code> when validation fails.</li>
+        </ul>
+        <p>These are composed in <code>routes.InitServerHandler</code> so that every request is logged and checked for a valid CSRF token:</p>
+        <pre><code class="highlight go">logged := middleware.LoggingMiddleware(mux)
+csrfProtected := middleware.CSRFMiddleware(logged)
+return csrfProtected</code></pre>
+        <h2 id="adding-middleware">Adding New Middleware</h2>
+        <p>Create a new file under <code>app/middleware/</code> containing a function that takes and returns an <code>http.Handler</code>. The example below enforces authentication:</p>
+        <pre><code class="highlight go">func RequireLogin(next http.Handler) http.Handler {
+    return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+        if !models.IsLoggedIn(r) {
+            http.Redirect(w, r, "/login", http.StatusSeeOther)
+            return
+        }
+        next.ServeHTTP(w, r)
+    })
+}</code></pre>
+        <p>Write tests in <code>app/middleware/requirelogin_test.go</code> to confirm the middleware's behaviour. Once implemented, update <code>app/routes/routes.go</code> to insert the middleware into the chain. Order matters—handlers closer to the mux run later:</p>
+        <pre><code class="highlight go">mux := http.NewServeMux()
+registerRoutes(mux, staticFiles)
+logged := middleware.LoggingMiddleware(mux)
+authenticated := middleware.RequireLogin(logged)
+csrfProtected := middleware.CSRFMiddleware(authenticated)
+return csrfProtected</code></pre>
+        <p>You can also wrap individual routes instead of the entire mux:</p>
+        <pre><code class="highlight go">mux.Handle("GET /admin", middleware.RequireLogin(AdminCtrl.Index))</code></pre>
+        <h2 id="middleware-and-routes">Middleware and Routes</h2>
+        <p>Routes are matched by the underlying <code>ServeMux</code> after all middleware has executed. Each middleware can inspect or modify the request and response, and because they are chained sequentially, the order in which you compose them in <code>InitServerHandler</code> dictates their effect on every route.</p>
+        <p>Adding new middleware therefore involves three steps: create the middleware function and tests, import the middleware package in <code>routes.go</code>, and wrap either the mux or individual handlers. This approach allows you to reuse functionality like authentication, custom headers or logging across your entire application.</p>
       </div>
     </article>
   </main>
